--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">NM_final_test2</string>
+    <string name="app_name">Final_test_embed</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
